src/tests/snapshots/gitu__tests__unstage__unstage_added_line.snap
---
source: src/tests/unstage.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   firstfile                                                           |
 @@ -1 +1,2 @@                                                                  |
▌+weehooo                                                                       |
  blrergh                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 modified   firstfile                                                           |
 @@ -1,2 +1 @@                                                                  |
 -testing                                                                       |
 -testtest                                                                      |
 +blrergh                                                                       |
                                                                                |
 Recent commits                                                                 |
 223428c main add firstfile                                                     |
 b66a0bf origin/main add initial-file                                           |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --cached --reverse --recount                                        |
styles_hash: 5b63b73d747a1054
