src/tests/snapshots/gitu__tests__unstage__unstage_deleted_executable_file.snap
---
source: src/tests/unstage.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
▌deleted    script.sh…                                                          |
                                                                                |
 Recent commits                                                                 |
 af83421 main add executable script                                             |
 289f1e5 add script.sh                                                          |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git restore --staged script.sh                                                |
styles_hash: dd34a0d9cfc2b3e7
