src/tests/snapshots/gitu__tests__unstage__unstage_deleted_file.snap
---
source: src/tests/unstage.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
▌deleted    to-delete…                                                          |
                                                                                |
 Recent commits                                                                 |
 0341425 main add to-delete                                                     |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git restore --staged to-delete                                                |
styles_hash: 4df87af1a4ca1428
