src/tests/snapshots/gitu__tests__unstage__unstage_removed_line.snap
---
source: src/tests/unstage.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   firstfile                                                           |
 @@ -1,3 +1,2 @@                                                                |
▌-testing                                                                       |
  weehooo                                                                       |
  blrergh                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 modified   firstfile                                                           |
 @@ -1,2 +1,3 @@                                                                |
  testing                                                                       |
 -testtest                                                                      |
 +weehooo                                                                       |
 +blrergh                                                                       |
                                                                                |
 Recent commits                                                                 |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --cached --reverse --recount                                        |
styles_hash: b323c3ddfad5d0ff
